2 typos index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<div class="col-md-6">
 					<div class="job_section">
 						<h1 class="jobs_text">Surrounding districts pay more</h1>
-						<p class="dummy_text">Within the tri-valley, Pleasanton USD is now the lowest paying district and has the worst benefits. Both Dublin USd and Livermore Valley Joint USD received substantial raises due to rising inflation. PUSD did not.</p>
+						<p class="dummy_text">Within the tri-valley, Pleasanton USD is now the lowest paying district and has the worst benefits. Both Dublin USD and Livermore Valley Joint USD received substantial raises due to rising inflation. PUSD did not.</p>
 						<div class="apply_bt"><a href="salaries.html">More on salaries</a></div>
 					</div>
 				</div>
@@ -137,7 +137,7 @@
 				<div class="col-md-6">
 					<div class="job_section_2">
 						<h1 class="jobs_text">PUSD is not prioritizing teachers</h1>
-						<p class="dummy_text">Over the last 20 years, teachers in PUSD have received, on average, a salary increase of 1.43% while inflation has averaged 2.48%. In this time, the medium home price in Alameda County has increased by 150%, consumer price index has increased by 75%, yet PUSD saleries have only increased by 31%. Teachers can no longer afford to teach in Pleasanton</p>
+						<p class="dummy_text">Over the last 20 years, teachers in PUSD have received, on average, a salary increase of 1.43% while inflation has averaged 2.48%. In this time, the medium home price in Alameda County has increased by 150%, consumer price index has increased by 75%, yet PUSD salaries have only increased by 31%. Teachers can no longer afford to teach in Pleasanton</p>
 						<div class="apply_bt"><a href="inflation.html">More on inflation</a></div>
 					</div>
 				</div>
