New homepage with new pages

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
 					<a class="nav-link" href="inflation.html">INFLATION</a>
 				</li>
 				<li class="nav-item">
+					<a class="nav-link" href="Rebuttal.html">REBUTTAL</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="Bargaining.html">BARGAINING</a>
+				</li>
+				<li class="nav-item">
 					<a class="nav-link" href="aboutme.html">ABOUT ME</a>
 				</li>
 			</ul>
@@ -145,6 +151,48 @@
 		</div>
 	</div>
 	<!-- Industrial section end-->
+	<!-- Rebuttal section start-->
+	<div class="marketing_section layout_padding">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="job_section">
+						<h1 class="jobs_text">Why <q>Why Pleasanton?</q>?</h1>
+						<p class="dummy_text">
+							PUSD is starting to heavily recruit because many teachers are leaving for higher paying districts. Just to be clear, they are more concerned with attracting new hires than securing the teachers they already have. Giving signing bonuses, sending management on recruitment trips across the country, and standing by as the quality educators they currently have move on simply for a livable wage.
+						</p>
+						<div class="apply_bt"><a href="Rebuttal.html">More about recruitment</a></div>
+					</div>
+				</div>
+				<div class="col-md-6 padding_0">
+					<div class="image_1"><img src="images/Rebutt0.png"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Rebuttal section end-->
+	<!-- Bargaining section start-->
+	<div class="marketing_section layout_padding">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="image_1 padding_0"><img src="images/NLRB.png"></div>
+				</div>
+				<div class="col-md-6">
+					<div class="job_section_2">
+						<h1 class="jobs_text">
+							Who’s coming to the table?
+						</h1>
+						<p class="dummy_text">
+							What is actually happening with bargaining this year? Obviously it is contentious, but why? Who’s court is the proverbial ball currently in? Is management being unreasonable, or is it APT that is holding it up? With most situations, it’s nuanced, and also, I’m not on the bargaining team, so I really don’t know anything, but I’m going to stand by my team and place the blame squarely on management.
+						</p>
+						<div class="apply_bt"><a href="Bargaining.html">More on bargaining</a></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Bargaining section end-->
 	<!-- footer section start-->
 	<div class="footer_section layout_padding">
 		<div class="container">
