Fix URL + header

--- a/Rebuttal.html
+++ b/Rebuttal.html
@@ -9,7 +9,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 <!-- site metas -->
-<title>Rebuttal</title>
+<title>Recruitment</title>
 <meta name="keywords" content="">
 <meta name="description" content="">
 <meta name="author" content="">	
@@ -56,7 +56,7 @@
                     <a class="nav-link" href="inflation.html">INFLATION</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Rebuttal.html">REBUTTAL</a>
+                    <a class="nav-link" href="Rebuttal.html">RECRUITMENT</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Bargaining.html">BARGAINING</a>
@@ -71,7 +71,7 @@
     <!-- Recurments  section start-->
     <div class="services_section">
         <div class="container">
-            <h1 class="services_text">Rebuttal</h1>
+            <h1 class="services_text">RECRUITMENT</h1>
         </div>
     </div>
 
@@ -85,7 +85,7 @@
                     <div class="col-sm-8">
                         <h1 class="software_text">Who’s the Rebutter?</h1>
                         <p class="lorem_ipsum_text">
-                            Over the memorial day weekend, a few different people brought to my attention a website from PUSD that appears to be a rebuttal site to mine called <a href="https://www.pleasantonusd.net/departments/human-resources/recruitment"><i>Why Pleasanton?</i></a>.  I immediately searched the site on archive.org with the Wayback Machine and found an image of the site from <a href=“https://web.archive.org/web/20230511204525/https://www.pleasantonusd.net/departments/human-resources/recruitment”>May 11, 2023</a>. I did not publish my website until May 16th, so I guess mine is actually the rebut to theirs, although I had started sending emails to FHS staff starting April 24th. In either case, both PUSD and myself seem to have been doing the same thing at the same time. It reminds me of a riddle. “You approach a fork in the road. One path leads to prosperity, the other to certain doom. Two wizards stand before you, one who speaks truths, the other only lies.” We have all heard this riddle, something about doing the opposite, but what question do we ask? You turn to one wizard and ask: “How would the other wizard respond to giving the teachers a cost of living raise?”
+                            Over the memorial day weekend, a few different people brought to my attention a website from PUSD that appears to be a rebuttal site to mine called <a href="https://www.pleasantonusd.net/departments/human-resources/recruitment"><i>Why Pleasanton?</i></a>.  I immediately searched the site on archive.org with the Wayback Machine and found an image of the site from <a href="https://web.archive.org/web/20230511204525/https://www.pleasantonusd.net/departments/human-resources/recruitment">May 11, 2023</a>. I did not publish my website until May 16th, so I guess mine is actually the rebut to theirs, although I had started sending emails to FHS staff starting April 24th. In either case, both PUSD and myself seem to have been doing the same thing at the same time. It reminds me of a riddle. “You approach a fork in the road. One path leads to prosperity, the other to certain doom. Two wizards stand before you, one who speaks truths, the other only lies.” We have all heard this riddle, something about doing the opposite, but what question do we ask? You turn to one wizard and ask: “How would the other wizard respond to giving the teachers a cost of living raise?”
                         </p>
                         <p class="lorem_ipsum_text">
                             Since we are on the topic of lies, could you imagine being newly hired by PUSD under the assumption they are the highest paying district? You of course came to this conclusion based on the information provided by PUSD on their <q>Why Pleasanton?</q> website. However, when you arrive, you find out this is not in fact the case, that you have been misled by your new employer, and you have arrived in a fairly toxic environment where the teachers do not feel supported or respected by their administration. That would truly be unfortunate. I really hope the integrity of the district is better than this site.
@@ -140,7 +140,7 @@
                                     Is it worth teaching in Pleasanton even for less money?
                                 </h1>
                                 <p class="lorem_ipsum_text">
-                                    Moving on to the days of service: Dublin and Pleasanton both with 185 days, while Livermore has 186, not 187 as presented on the PUSD site (not certain how they came to 187, it’s just not true. The first line of Article 8 in the <a href=”https://www.livermoreschools.org/cms/lib/CA50000061/Centricity/Domain/71/LEA%20CBA%202020-2023%203.1.22%20v5.pdf”>LEA contract</a> is “The bargaining unit member work year shall be 180 student instructional days, three (3) bargaining unit member workdays, and three (3) professional development days, as restricted below, with the following exceptions: psychologists, nurse, and counselors.”). So DUSD is the same as PUSD and LVJUSD has one more work day for teachers to prep for the year, something we all do anyway. Good sell PUSD.
+                                    Moving on to the days of service: Dublin and Pleasanton both with 185 days, while Livermore has 186, not 187 as presented on the PUSD site (not certain how they came to 187, it’s just not true. The first line of Article 8 in the <a href="https://www.livermoreschools.org/cms/lib/CA50000061/Centricity/Domain/71/LEA%20CBA%202020-2023%203.1.22%20v5.pdf">LEA contract</a> is “The bargaining unit member work year shall be 180 student instructional days, three (3) bargaining unit member workdays, and three (3) professional development days, as restricted below, with the following exceptions: psychologists, nurse, and counselors.”). So DUSD is the same as PUSD and LVJUSD has one more work day for teachers to prep for the year, something we all do anyway. Good sell PUSD.
                                 </p>
                                 <p class="lorem_ipsum_text">
                                     This next point has been a headache, more than anything: Hours in the Work Day. This ambiguous term is defined and redefined on a regular basis. What is our hourly rate? Well is that the per diem hourly rate or the certificated hourly rate, yup those are different. The first is our true hourly rate based on a 6.5 hour work day and how much each individual teacher makes (this number is different for everybody and reflects teachers experience. It is a fair hourly rate), the later is based on an 8 hour work day (8 hours because this way they can pay us less, less even than a sub). Yes, if we are asked to sub during our prep periods because they cannot secure enough substitute teachers, we are paid $50.68. A sub in PUSD is paid between $250-$300 per day. At the highschool level, this is for 5 hours of work, so a sub might be making $300 while if teachers filled that spot it would only cost the district $253.41, just a hair over the minimum cost of a sub to the district. Last year, this hourly rate was in the $48 range, so it was always less. So why did this happen? Well, during the pandemic, there was an extreme sub shortage, so PUSD basically doubled the sub rate overnight. There was also a teacher shortage, still waiting for my teacher salary to double. Anyway, I bring this whole situation up because it is another example of feeling the disrespect from PUSD management directed toward their dedicated teachers. Typically when employees work overtime, they make time and a half, teachers in PUSD just make half.
@@ -165,11 +165,11 @@
                                         What about these other accolades?
                                     </h1>
                                     <p class="lorem_ipsum_text">
-                                        Best District? How long do we expect this to last when we are no longer able to hire and retain the best possible educators. I hear Valley View has had a big week, losing 9 or more of their teachers to higher paying districts. This is over a third of the teachers at that site. I’m wishing them all the best. I know two high school teachers who send their children to Valley View. We need to ensure we are attracting and retaining! the best possible educators. PUSD quoted on their “Why Pleasanton?” site the website niche.com. Let’s check out the niche.com ranking for <a href=”https://www.niche.com/k12/valley-view-elementary-school-pleasanton-ca/”>Valley View</a>. As you can see below, the teachers at Valley View receive an A. Nice work! How true will this be when at least a third of the teachers will be new next year? If I have 2/3rds of my students at an A, and the others are complete unknowns, I wouldn’t be very confident saying my students are all A students.
+                                        Best District? How long do we expect this to last when we are no longer able to hire and retain the best possible educators. I hear Valley View has had a big week, losing 9 or more of their teachers to higher paying districts. This is over a third of the teachers at that site. I’m wishing them all the best. I know two high school teachers who send their children to Valley View. We need to ensure we are attracting and retaining! the best possible educators. PUSD quoted on their “Why Pleasanton?” site the website niche.com. Let’s check out the niche.com ranking for <a href="https://www.niche.com/k12/valley-view-elementary-school-pleasanton-ca/">Valley View</a>. As you can see below, the teachers at Valley View receive an A. Nice work! How true will this be when at least a third of the teachers will be new next year? If I have 2/3rds of my students at an A, and the others are complete unknowns, I wouldn’t be very confident saying my students are all A students.
                                     </p>
                                     <div class="image_1 padding_0"><img src="images/Rebutt2.png"></div>
                                     <p class="lorem_ipsum_text">
-                                        The niche.com rating for <a href=”https://www.niche.com/k12/valley-view-elementary-school-pleasanton-ca/”>Valley View Elementary School</a> showing their teachers are a level A.
+                                        The niche.com rating for <a href="https://www.niche.com/k12/valley-view-elementary-school-pleasanton-ca/">Valley View Elementary School</a> showing their teachers are a level A.
                                     </p>
                                     <p class="lorem_ipsum_text">
                                         Best places to teach? Where do you get that? I don’t remember being asked. I feel so fortunate to work amongst some of the best educators in the area, but I worry they won’t stick around. Why would they? If you can do the same job just a couple miles down the road, get more money AND get better benefits, who would stay?
