--- a/Bargaining.html
+++ b/Bargaining.html
@@ -32,7 +32,7 @@
 
 </head>
 <body>
-    <!-- header section start-->
+     <!-- header section start-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="logo" href="#"><img src="images/logo.png"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +56,7 @@
                     <a class="nav-link" href="inflation.html">INFLATION</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Rebuttal.html">REBUTTAL</a>
+                    <a class="nav-link" href="Rebuttal.html">RECRUITMENT</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="Bargaining.html">BARGAINING</a>
