--- a/aboutme.html
+++ b/aboutme.html
@@ -32,42 +32,42 @@
 
 </head>
 <body>
-   <!-- header section start-->
-	<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		<a class="logo" href="#"><img src="images/logo.png"></a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarNav">
-			<ul class="navbar-nav">
-				<li class="nav-item">
-					<a class="nav-link" href="index.html">HOME</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="salaries.html">SALARIES</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="raises.html">RAISES</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="surplus.html">SURPLUS</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="inflation.html">INFLATION</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="Rebuttal.html">REBUTTAL</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="Bargaining.html">BARGAINING</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="aboutme.html">ABOUT ME</a>
-				</li>
-			</ul>
-		</div>
-	</nav>
-	<!-- header section start-->
+      <!-- header section start-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="logo" href="#"><img src="images/logo.png"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">HOME</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="salaries.html">SALARIES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="raises.html">RAISES</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="surplus.html">SURPLUS</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="inflation.html">INFLATION</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Rebuttal.html">RECRUITMENT</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="Bargaining.html">BARGAINING</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="aboutme.html">ABOUT ME</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <!-- header section start-->
     <!-- Recurments  section start-->
     <div class="services_section">
         <div class="container">
