Add section 5 Rebuttal.html

--- a/Rebuttal.html
+++ b/Rebuttal.html
@@ -183,6 +183,30 @@
                         </div>
                     </div>
                 </div>
+                 <div class="Recurments_section_2">
+                    <div class="container">
+                        <div class="product_section">
+                            <div class="row padding_top_0">
+                                <div class="col-sm-2">
+                                    <div class="one_text"><a href="#">05</a></div>
+                                </div>
+                                <div class="col-sm-8">
+                                    <h1 class="software_text">
+                                        Are they changing their narrative?
+                                    </h1>
+                                    <p class="lorem_ipsum_text">
+                                        Over the last few weeks, the Valley View parent group has been doing a tremendous job applying pressure to the district office because of the huge loss within the Dual Immersion program. On the evening of June 6th, 2023, they held another meeting at Valley View with district management. At this meeting, a slide was shared by PUSD indicating a more truthful salary comparison between districts, shown below. Previously, PUSD was shown as the best; now it is rightfully placed near the bottom, when it comes to compensation. As for the “Why Pleasanton?” site, it has not been updated to reflect these changes, at least not on June 7, 2023. They did however change the ordering of the First Year salary. I mentioned previously that PUSD was listed at the top, even though it was not higher than Dublin, now PUSD is listed rightfully second with DUSD at the top, based strictly off the numbers presented in the website graphic (and we can see from the new graphic, that PUSD should even be lower). We are no longer allowing PUSD to push their narrative that PUSD is the best paying, and while they aren’t listening to solutions, at least they are acknowledging their lies. Everybody wants what is best for Pleasanton Students, and right now, they need to attract and retain the best teachers.
+                                    </p>
+                                    <div class="image_1 padding_0"><img src="images/NewPUSDSalary.png"></div>
+                                    <p class="lorem_ipsum_text">
+                                        A graphic shown at Valley View Elementary Parent Meeting indicating that PUSD is not the best paying district.
+                                    </p>
+                                </div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
