Add date to description

--- a/Rebuttal.html
+++ b/Rebuttal.html
@@ -199,7 +199,7 @@
                                     </p>
                                     <div class="image_1 padding_0"><img src="images/NewPUSDSalary.png"></div>
                                     <p class="lorem_ipsum_text">
-                                        A graphic shown at Valley View Elementary Parent Meeting indicating that PUSD is not the best paying district.
+                                        A graphic shown at Valley View Elementary Parent Meeting on June 6, 2023 indicating that PUSD is not the best paying district.
                                     </p>
                                 </div>
 
