--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="Bargaining.html">BARGAINING</a>
                 </li>
+              <li class="nav-item">
+                    <a class="nav-link" href="Impasse.html">IMPASSE</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">ABOUT ME</a>
                 </li>
@@ -79,6 +82,24 @@
 		</div>
 	</div>
 	<!-- banner section end-->
+	<!-- Government section start-->
+	<div class="marketing_section layout_padding">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-6 padding_0">
+					<div class="image_1"><img src="images/impasse0.png"></div>
+				</div>
+				<div class="col-md-6">
+					<div class="job_section_2">
+						<h1 class="jobs_text">Impasse</h1>
+						<p class="dummy_text">District management agrees to go to impasse with APT, and they are claiming, very publicly, that they have no money.</p>
+						<div class="apply_bt"><a href="impasse.html">More on impasse</a></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Government section end-->
 	<!-- marketing section start-->
 	<div class="marketing_section layout_padding">
 		<div class="container-fluid">
