--- a/Rebuttal.html
+++ b/Rebuttal.html
@@ -61,6 +61,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="Bargaining.html">BARGAINING</a>
                 </li>
+              <li class="nav-item">
+                    <a class="nav-link" href="Impasse.html">IMPASSE</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">ABOUT ME</a>
                 </li>
