--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<div class="job_section_2">
 						<h1 class="jobs_text">Impasse</h1>
 						<p class="dummy_text">District management agrees to go to impasse with APT, and they are claiming, very publicly, that they have no money.</p>
-						<div class="apply_bt"><a href="impasse.html">More on impasse</a></div>
+						<div class="apply_bt"><a href="Impasse.html">More on impasse</a></div>
 					</div>
 				</div>
 			</div>
