--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
               <li class="nav-item">
                     <a class="nav-link" href="Impasse.html">IMPASSE</a>
                 </li>
+		  <li class="nav-item">
+                    <a class="nav-link" href="Drowning.html">DROWNING</a>
+                </li>    
                 <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">ABOUT ME</a>
                 </li>
@@ -82,6 +85,24 @@
 		</div>
 	</div>
 	<!-- banner section end-->
+	<!-- marketing section start-->
+	<div class="marketing_section layout_padding">
+		<div class="container-fluid">
+			<div class="row">
+				<div class="col-md-6">
+					<div class="job_section">
+						<h1 class="jobs_text">We are drowning</h1>
+						<p class="dummy_text">This message is clearly not being heard. PUSD receives big windfalls of money due to inflation and it doesn’t go to teachers. The PUSD teacher salaries are not enough to afford a life in pleasanton. Let’s look at a case study.</p>
+						<div class="apply_bt"><a href="salaries.html">More on Drowning</a></div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="image_1 padding_0"><img src="images/Drowning0.png"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- marketing section end-->
 	<!-- Government section start-->
 	<div class="marketing_section layout_padding">
 		<div class="container-fluid">
