--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				<div class="col-md-6">
 					<div class="job_section">
 						<h1 class="jobs_text">We are drowning</h1>
-						<p class="dummy_text">This message is clearly not being heard. PUSD receives big windfalls of money due to inflation and it doesn’t go to teachers. The PUSD teacher salaries are not enough to afford a life in pleasanton. Let’s look at a case study.</p>
+						<p class="dummy_text">This message is clearly not being heard. PUSD receives big windfalls of money due to inflation, and it doesn’t go to teachers. The PUSD teacher salaries are not enough to afford a life in Pleasanton. Let’s look at a case study.</p>
 						<div class="apply_bt"><a href="salaries.html">More on Drowning</a></div>
 					</div>
 				</div>
