--- a/Drowning.html
+++ b/Drowning.html
@@ -91,16 +91,16 @@
                     <div class="col-sm-8">
                         <h1 class="software_text">A's excited about their new job</h1>
                         <p class="lorem_ipsum_text">
-                            Let’s consider a new hire to PUSD. We will call this person A. A is a single parent of two school aged children. A just finished their credential and amazingly found an opening at an elementary school in Pleasanton teaching in the dual immersion program for 3rd grade. A is extremely excited to get started, but before the first day of school, A meets with HR to go over the paperwork for employment and sign up for benefits. So let’s break this down, and we are going to do this on an hourly basis, so maybe that drives the point home a little more.
+                            Let’s consider a new hire to PUSD. We will call this person A. A is a single parent of two school aged children. A just finished their credential and amazingly found an opening at an elementary school in Pleasanton teaching in the dual immersion program for 3rd grade (A position that PUSD desperately needs to fill). A is extremely excited to get started, but before the first day of school, A meets with HR to go over the paperwork for employment and sign up for benefits. So let’s break this down, and we are going to do this on an hourly salary basis, so maybe that drives the point home a little more.
                         </p>
                         <p class="lorem_ipsum_text">
-                            A’s base salary of $75,011 seems like an amazing salary: $50.68 an hour. Add on to that A’s amazing qualifications: B-Clad and Master’s Degree. These stipends add on $3.38 and $0.50 per hour respectively (wait that can’t be right. Only a 50 cent per hour raise for having a master’s degree? McDonalds employees get that raise after 3 months for not putting crayons in the hamburgers). Anyway, total monthly hourly rate is $54.57, not bad. But that’s no the take home pay. Let’s go over the deductions.
+                            A’s base salary of $75,011 seems like an amazing salary: $50.68 an hour. Add on to that A’s amazing qualifications: B-Clad and Master’s Degree. These stipends add on $3.38 and $0.50 per hour respectively (wait that can’t be right. Only a 50 cents per hour raise for having a master’s degree? McDonalds employees get that raise after 3 months for not putting crayons in the hamburgers). Anyway, total monthly hourly rate is $54.57, not bad. But that’s not the take home pay. Let’s go over the deductions.
                         </p>
                         <p class="lorem_ipsum_text">
                             Let’s start with medical. Cheapest family plan option is $31,868.04 annually, which comes out to $21.53 an hour. The district has recently agreed to cover the cost of a single person, so that will reduce that medical cost by $8.28. Medical out the door is $13.25 per hour of work. Now we add dental: $1.48 an hour and vision: $0.22 per hour. Total health benefit costs of $14.95 per hour. Over 27% of A’s salary goes right to making sure if they get sick, they won’t go bankrupt. We live in a great country.
                         </p>
                         <p class="lorem_ipsum_text">
-                            Teachers are fortunate to have a good retirement system, well sort of. We have to pay for it. STRS contribution comes out to $5.57 per hour. And since A can’t stand that thought of paying more to their vision than to their 403(b), they decide to contribute $0.25 per hour to their future (a whopping $370 a year, I’m sure that will be enough). Notice these benefits don’t include disability or life insurance. While some say you can’t afford to not have these benefits, A can’t afford to have them.
+                            Teachers are fortunate to have a good retirement system, well sort of. We have to pay for it. STRS contribution comes out to $5.57 per hour. And since A can’t stand the thought of paying more to their vision than to their 403(b), they decide to contribute $0.25 per hour to their future (a whopping $370 a year, I’m sure that will be enough). Notice these benefits don’t include disability or life insurance. While some say you can’t afford to not have these benefits, A simply can’t afford to have them.
                         </p>
                         <p class="lorem_ipsum_text">
                             Now comes federal income tax, state income tax, and medicare which come to $3.90, $1.11, and $0.76 an hour respectively. This totals $5.77 per hour of money to the government. Lastly, we add on union dues of $0.94 per hour. In my mind, money well spent because the district is certainly not looking out for our best interests.
@@ -128,18 +128,44 @@
                                 Where will A live?
                             </h1>
                             <p class="lorem_ipsum_text">
-                                Now let’s find A an apartment. The absolute cheapest 2 bedroom 1 bath apartment in Pleasanton has a monthly cost of $2400. This place is a dump, but it’s the only thing that A can afford. The next cheapest is $2800 or based on the hourly rate relative to their job with PUSD, this cost is $19.46.
+                                Now let’s find A an apartment. The absolute cheapest 2 bedroom 1 bath apartment in Pleasanton has a monthly cost of $2400. This place is a dump, but it’s the only thing that A can afford (The next cheapest is $2800). Based on the hourly rate relative to their job with PUSD, this cost is $19.46.
                             </p>
                             <p class="lorem_ipsum_text">
-                                Now you might ask yourself, why doesn’t A live in a cheaper city and commute in? Well this would bring up a few issues. First, A doesn’t have a car, they simply can’t afford one. Also, a longer commute would also require childcare for their two children, also unaffordable.
+                                You might ask yourself, why doesn’t A live in a cheaper city and commute in? Well this would bring up a few issues. First, A doesn’t have a car, they simply can’t afford one. Also, a longer commute would also require childcare for their two children, also unaffordable.
                             </p>
                             <p class="lorem_ipsum_text">
-                                So we take the $27.09 take home, remove the cost of an apartment, and we are left with $7.63 an hour. This is not enough to live on. Let’s say A wants to treat their children to eating out at a restaurant. That literally costs the entire day’s pay. Minimum wage in California will be $16 an hour starting January 2024, so students at PUSD schools who live with their parents and have a minimum wage job will have more disposable income than the teachers; more than twice as much.
+                                So we take the $27.09 take home, remove the cost of an apartment, and we are left with $7.63 an hour. This is not enough to live on. Let’s say A wants to treat their children to eating out at a restaurant. That literally costs the entire day’s pay. Minimum wage in California will be $16 an hour starting January 2024, so students at PUSD schools who live with their parents and have a minimum wage job will have more disposable income than the teachers.
                             </p>
                             <div class="image_1 padding_0"><img src="images/Drowning1.png"></div>
                             <p class="lorem_ipsum_text">
                                 So why are PUSD teachers leaving to other districts for even just a few thousand more annually or cheaper benefits? Because they cannot afford not to.
                             </p>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            
+            </div>
+    <div class="Recurments_section_2">
+            <div class="container">
+                <div class="product_section">
+                    <div class="row padding_top_0">
+                        <div class="col-sm-2">
+                            <div class="one_text"><a href="#">03</a></div>
+                        </div>
+                        <div class="col-sm-8">
+                            <h1 class="software_text">
+                                So what happened to A?
+                            </h1>
+                            <p class="lorem_ipsum_text">
+                                A resigned before the first day of school. Of course they did. This was completely unaffordable. And this was a big loss for both A and PUSD. This was a needed hire. A’s interview was phenomenal. The educational background, new strategies, and young energy that they brought to the table would have been a huge add for that PUSD elementary school. Also, A was an equity hire that would have given our special population students somebody to look up to and connect with. Isn’t this exactly the teacher PUSD should be doing everything to attract and retain?
+                            </p>
+                            <p class="lorem_ipsum_text">
+                                APT initially asked for a 15.5% raise with full benefits. Where would that leave A if the district had valued their educators and accepted the deal: Well the new gross hourly rate would be $62.42, but the real story is in the take home pay. After all deductions and A’s apartment rent is paid, A still has $21.31 per hour left. That is almost 3X more money left over than before the raise. That makes a difference. A big difference.
+                            </p>
+                          
 
                         </div>
 
