--- a/inflation.html
+++ b/inflation.html
@@ -65,6 +65,9 @@
                     <a class="nav-link" href="Impasse.html">IMPASSE</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="Drowning.html">DROWNING</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="aboutme.html">ABOUT ME</a>
                 </li>
             </ul>
