--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 	<div class="banner_section layout_padding">
 		<div class="container">
 			<h1 class="best_taital">Pleasanton Students Deserve the Best</h1>
-			<h2 class="best_taital2">but they soon won't have the best teachers.</h2>
+			<h2 class="best_taital2">but they soon won't have the best Teachers.</h2>
 
 			<p class="there_text">Pleasanton USD does not pay their teachers a livable wage, and the best teachers PUSD has to offer have already begun leaving for higher salaries elsewhere.</p>
 
